--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
+
+typings
+typings.json
+.vscode
